# Community-Game

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CODESTYLE.md  CONTRIBUTING.md  CTestTestfile.cmake  InventorySystem.cpp  InventorySystem.h  ItemBase.cpp  ItemBase.h  README.md  Report20170614-0125.diagsession  Timer.cpp  Timer.h  UPDATES.md  gmon.out
Source/: Main.cpp
Source/util/: ZVector.hpp
cmake_project/src/: Application.cpp  main.cpp
cmake_project/src/entity/: Damage.h  Entity.cpp  Entity.h  Player.cpp  Stats.h
cmake_project/src/input/: Input.cpp
cmake_project/src/level/: Level.cpp  Level.h  LevelRenderer.h
cmake_project/src/states/: StatePlaying.cpp
cmake_project/src/util/: Exceptions.cpp  Random.cpp  Types.h
res/entities/: Entities.txt  Lantern.json  Player.json  Projectile.json
res/entities/enemy/: Zombie.json
res/entities/scripts/: player.lua  zombie.lua
res/scripts/: player.lua  zombie.lua
res/settings/: Control List.txt  Controls.json
res/shaders/: transparency.frag
res/textures/: LICENSE.md  LICENSE.txt
res/tiles/: Blank.json  Cobblestone.json  Dark_Stone.json  Light_Stone.json  Light_Stone.tile  Med_Stone.json  Void.json
res/tiles/dungeon/: BrickFloor.json  BrickWall.json  Cobblestone.json
src/: Application.cpp  Application.h  Common.h  main.cpp
src/app/: Application.cpp  Application.h  Cursor.cpp  Cursor.h  WindowSettings.h
src/components/: Component.h  Components.h  InventoryComponent.cpp  InventoryComponent.h  LifeComponent.cpp  LifeComponent.h  LightComponent.cpp  LightComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.cpp  SpriteComponent.h  StatsComponent.cpp  StatsComponent.h
src/debug/: DebugConsole.cpp  DebugConsole.h  DebugMenu.cpp  DebugMenu.h
src/entity/: AStar.cpp  AStar.h  Creature.cpp  Creature.h  Damage.h  Enemy.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Player.cpp  Player.h  Stats.cpp  Stats.h
src/events/: Event.cpp  Event.h  EventDispatcher.h  Events.h  IEventListener.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
src/graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Animator.cpp  Animator.h  Label.cpp  Label.h  Renderable2D.h  Renderer2D.cpp  Renderer2D.h
src/input/: Input.cpp  Input.h  InputScheme.cpp  InputScheme.h
src/item/: Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h
src/level/: Level.cpp  Level.h  LevelConstants.h  LevelRenderer.cpp  LevelRenderer.h  LightMap.cpp  LightMap.h  TileMap.cpp  TileMap.h  Tile_Map.cpp  Tile_Map.h
src/maths/: AABB.h  AStar.cpp  AStar.h  Collision.h  Color.h  Hitbox.h  Maths.h  MathsFunc.h  Random.cpp  Random.h  Rectangle.cpp  Rectangle.h  Vec2.h  Vector2.h  maths.h  maths_func.h  vec2.h
src/resources/: ResourceHolder.h  ResourceManager.h  Resource_Holder.h  Resource_Manager.h
src/sound/: BGM.cpp  BGM.h  Music.cpp  Music.h  SFX.cpp  SFX.h  SoundFX.cpp  SoundFX.h
src/states/: StateBase.h  StatePlaying.cpp  StatePlaying.h  State_Base.h  State_Playing.cpp  State_Playing.h
src/ui/: Label.cpp  Label.h  UI.cpp  UI.h  UIButton.cpp  UIButton.h  UIComponentBase.h  UILabel.cpp  UILabel.h  UISlider.cpp  UISlider.h
src/util/: AStar.cpp  AStar.h  Exceptions.cpp  Exceptions.h  FileReader.h  FileUtil.cpp  FileUtil.h  FileUtils.hpp  Log.h  Maths.h  PriorityQueue.h  Random.cpp  Random.h  String.cpp  String.h  TileFlooding.cpp  TileFlooding.h  Timestep.h  Types.h  json.hpp  sfKeyToString.txt
tests/: CMakeLists.txt  tests.cpp
(+103 files in other folders)
